added task options

--- a/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb
+++ b/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb
@@ -16,29 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "kernel": "Bash"
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: Running \u001b[32mProcessing_1\u001b[0m: change the name of gene_exp\n",
-      "INFO: \u001b[32mProcessing_1\u001b[0m (index=0) is \u001b[32mignored\u001b[0m due to saved signature\n",
-      "INFO: \u001b[32mProcessing_1\u001b[0m output:   \u001b[32m/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/gene_exp/geneCountsResidualsPlusBaselineAgeGenderAdj_rename.txt /Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/gene_exp/geneCountsResidualsPlusBaselineAgeGenderAdj_discardID.txt\u001b[0m\n",
-      "INFO: Running \u001b[32mProcessing_2\u001b[0m: add position to gene_ID based on ensembl\n",
-      "INFO: \u001b[32mProcessing_2\u001b[0m is \u001b[32mcompleted\u001b[0m.\n",
-      "INFO: \u001b[32mProcessing_2\u001b[0m output:   \u001b[32m/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/gene_exp/geneCountsResidualsPlusBaselineAgeGenderAdj_rename_anno.txt\u001b[0m\n",
-      "INFO: Workflow Processing (ID=7996406c03692b3d) is executed successfully with 1 completed step and 1 ignored step.\n",
-      "\n"
+      "Keyboard Interrupt\n"
      ]
     }
    ],
    "source": [
     "SOS run /Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb \\\n",
-    "    --ref \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/new_gene_keys_plink.txt\" \\\n",
+    "    --ref \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/new_gene_keys_WGS_plink.txt\" \\\n",
     "    --name_col 2 \\\n",
     "    --real_name_col 1 \\\n",
     "    --gene_exp \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/gene_exp/geneCountsResidualsPlusBaselineAgeGenderAdj.txt\" \\\n",
@@ -88,7 +81,7 @@
     "parameter: output = \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/\"\n",
     "# where to store the output file\n",
     "\n",
-    "# change the name of gene_exp\n",
+    "# change the name of gene_exp, save the modified expression file and the file containing the patients ID whose genotype information are absent.\n",
     "[Processing_1]\n",
     "input: ref, gene_exp\n",
     "output: f'{output}/{_input[1]:bn}_rename.txt',\n",
@@ -111,7 +104,7 @@
     "# add position to gene_ID based on ensembl \n",
     "[Processing_2]\n",
     "input: group_by = 2\n",
-    "output: f'{output}/{_input[0]:bn}_anno.txt'\n",
+    "output: f'{output}/{_input[0]:bn}_region_list.txt'\n",
     "\n",
     "R:  expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout'\n",
     "    library(\"biomaRt\")\n",
