remove NA in region_list

--- a/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb
+++ b/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb
@@ -36,7 +36,8 @@
     "    --real_name_col 1 \\\n",
     "    --gene_exp \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/gene_exp/geneCountsResidualsPlusBaselineAgeGenderAdj.txt\" \\\n",
     "    --start_at 2 \\\n",
-    "    --output \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/gene_exp/\" "
+    "    --output \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/gene_exp/\" \\\n",
+    "    -j 2"
    ]
   },
   {
@@ -86,7 +87,7 @@
     "input: ref, gene_exp\n",
     "output: f'{output}/{_input[1]:bn}_rename.txt',\n",
     "        f'{output}/{_input[1]:bn}_discardID.txt'\n",
-    "\n",
+    "task: trunk_workers = 1, trunk_size = 1, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R:  expand= \"$[ ]\" , stderr = f'{_output[1]:n}.stderr', stdout = f'{_output[1]:n}.stdout'\n",
     "    library(dplyr)\n",
     "    gene_exp = readr::read_delim(\"$[_input[1]]\",delim = \" \")\n",
@@ -105,7 +106,7 @@
     "[Processing_2]\n",
     "input: group_by = 2\n",
     "output: f'{output}/{_input[0]:bn}_region_list.txt'\n",
-    "\n",
+    "task: trunk_workers = 1, trunk_size = 1, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R:  expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout'\n",
     "    library(\"biomaRt\")\n",
     "    library(dplyr)\n",
@@ -113,8 +114,8 @@
     "    ensembl = useDataset(\"hsapiens_gene_ensembl\",mart=useMart(\"ENSEMBL_MART_ENSEMBL\"))\n",
     "    ensembl_df <- getBM(attributes=c(\"ensembl_gene_id\",\"chromosome_name\", \"start_position\", \"end_position\"),mart=ensembl)\n",
     "    my_genes = gene_exp$gene_ID\n",
-    "    my_genes_ann = ensembl_df[match(my_genes, ensembl_df$ensembl_gene_id),]%>%dplyr::select( \"#chr\" = chromosome_name, start_position, end_position,\"gene_ID\" = ensembl_gene_id)\n",
-    "    final%>%readr::write_tsv( path = \"$[_output]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
+    "    my_genes_ann = ensembl_df[match(my_genes, ensembl_df$ensembl_gene_id),]%>%dplyr::select( \"#chr\" = chromosome_name, start_position, end_position,\"gene_ID\" = ensembl_gene_id)%>%filter(gene_ID!=\"NA\")\n",
+    "    my_genes_ann%>%readr::write_tsv( path = \"$[_output]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
    ]
   }
  ],
