select only the 1:23 chromosome,bug fixed

--- a/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb
+++ b/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb
@@ -114,7 +114,7 @@
     "    ensembl = useDataset(\"hsapiens_gene_ensembl\",mart=useMart(\"ENSEMBL_MART_ENSEMBL\"))\n",
     "    ensembl_df <- getBM(attributes=c(\"ensembl_gene_id\",\"chromosome_name\", \"start_position\", \"end_position\"),mart=ensembl)\n",
     "    my_genes = gene_exp$gene_ID\n",
-    "    my_genes_ann = ensembl_df[match(my_genes, ensembl_df$ensembl_gene_id),]%>%filter(gene_ID!=\"NA\")%>%filter(!(chromosome_name%in%1:23%>%dplyr::select( \"#chr\" = chromosome_name, start_position, end_position,\"gene_ID\" = ensembl_gene_id)%>%filter(gene_ID!=\"NA\")\n",
+    "    my_genes_ann = ensembl_df[match(my_genes, ensembl_df$ensembl_gene_id),]%>%filter(gene_ID!=\"NA\")%>%filter(chromosome_name%in%1:23)%>%dplyr::select( \"#chr\" = chromosome_name, start_position, end_position,\"gene_ID\" = ensembl_gene_id)%>%filter(gene_ID!=\"NA\")\n",
     "    my_genes_ann%>%readr::write_tsv( path = \"$[_output]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
    ]
   }
