container for name change pipeline

--- a/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb
+++ b/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb
@@ -82,13 +82,16 @@
     "parameter: output = \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/\"\n",
     "# where to store the output file\n",
     "\n",
+    "# Container option for software to run the analysis: docker or singularity\n",
+    "parameter: container = '/home/hs3163/system_file/twas_latest.sif'\n",
+    "\n",
     "# change the name of gene_exp, save the modified expression file and the file containing the patients ID whose genotype information are absent.\n",
     "[Processing_1]\n",
     "input: ref, gene_exp\n",
     "output: f'{output}/{_input[1]:bn}_rename.txt',\n",
     "        f'{output}/{_input[1]:bn}_discardID.txt'\n",
     "task: trunk_workers = 1, trunk_size = 1, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R:  expand= \"$[ ]\" , stderr = f'{_output[1]:n}.stderr', stdout = f'{_output[1]:n}.stdout'\n",
+    "R:  expand= \"$[ ]\" , stderr = f'{_output[1]:n}.stderr', stdout = f'{_output[1]:n}.stdout',container = container\n",
     "    library(dplyr)\n",
     "    gene_exp = readr::read_delim(\"$[_input[1]]\",delim = \" \")\n",
     "    index = readr::read_delim(\"$[_input[0]]\",delim = \"\\t\")\n",
@@ -107,7 +110,7 @@
     "input: group_by = 2\n",
     "output: f'{output}/{_input[0]:bn}_region_list.txt'\n",
     "task: trunk_workers = 1, trunk_size = 1, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R:  expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout'\n",
+    "R:  expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout',container = container\n",
     "    library(\"biomaRt\")\n",
     "    library(dplyr)\n",
     "    gene_exp = readr::read_delim(\"$[_input[0]]\",delim = \"\\t\")\n",
