--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -68,6 +68,35 @@
     "kernel": "R"
    },
    "source": [
+    "## Composition of genes\n",
+    "The section described the nature of the genes that are not included in the ROSMAP dataset, along with potential reason for the exclusion of said genes.\n",
+    "### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "R"
+   },
+   "source": [
     "## Weight Computation\n",
     "The weight of each fo the extracted region are then computed using the standard TWAS/Fusion workflow. All five models are used. There are 43 genes who passed the heritability check. The computation of weight for this 43 genes take around 9 hours. The genes that passed the heratibiity check can be found at `/home/hs3163/Project/Alz/data/Alz_passed_gene_region_list.txt` \n",
     "The Computed genes can be found at\n",
@@ -135,22 +164,37 @@
    },
    "outputs": [],
    "source": [
-    "# Association\n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb association_test  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/Alz \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
     "  --region_list /home/hs3163/Project/Alz/data/Alz_passed_gene_region_list.txt \\\n",
-    "  --weights_list /home/hs3163/Project/Alz/WEIGHTS/geneTpmResidualsAgeGenderAdj_rename.weights_list.txt \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
+    "  --output_path /home/hs3163/Project/Alz \\\n",
     "  --window 500000 \\\n",
     "  --container /home/hs3163/system_file/twas_latest.sif \\\n",
     "  --model bslmm blup lasso top1 enet \\\n",
-    "  --job_size 1\n",
+    "  --job_size 1\\\n",
     "  -J 6 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "R"
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
